tests/unit/language/errors/handle_no_sys_error.arche
// RUN: %arche -o %t %s > %t.out 2>&1 ; grep -q "cannot be sys parameter" %t.out
arche Entity {
  next: handle<Entity>,
}


static pool<Entity>(10);


sys process(next) {
}


@allow_pure_proc
proc main() {
}
